Typechecker/Tests/stella-implementation-in-swiftTests/Resources/letrecs/ill-typed/bad-letrec.stella
language core;

extend with #letrec-bindings;

fn main(n : Nat) -> Nat {
  return let bad = n in if bad then bad else succ(bad)
}
